2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowntty.c: is_my_tty returns a bool.
	* libmisc/chowntty.c: Avoid implicit conversion of integers to
	booleans.
	* libmisc/chowntty.c: Add brackets.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowndir.c: Avoid assignment in comparisons, implicit
	comparison of integers to booleans.
	* libmisc/chowndir.c: The return value of closedir is not checked
	on purpose.
	* libmisc/chowndir.c: Add brackets.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chkname.h, libmisc/chkname.c: check_group_name (resp.
	check_user_name) renamed to is_valid_user_name (resp.
	is_valid_group_name). is_valid_user_name and is_valid_group_name
	return a bool.
	* src/grpck.c, src/newusers.c, src/usermod.c, src/useradd.c,
	src/groupmod.c, src/pwck.c, src/groupadd.c: Use is_valid_user_name
	and is_valid_group_name, following above change.
	* libmisc/chkname.c: Avoid implicit conversion of chars to
	booleans. Add brackets and parenthesis.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/xmalloc.c: Avoid implicit conversion of integers /
	pointers to booleans.
	* libmisc/xgetXXbyYY.c: Likewise.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in, lib/defines.h: Allow usage of booleans in the
	source.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Allow --disable-man and --enable-man=no.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	Prepare the 4.1.2 release
	* NEWS: set the release date.
	* man/po/*.po, po/*.po: Updated PO files.
	* configure.in: Set the version to 4.1.2.

2008-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* po/Makevars, man/po/Makefile.in.in: Run msgmerge with
	--previous. (This requires gettext >= 0.16)

2008-05-24  Nicolas François  <nicolas.francois@centraliens.net>
