@@ -32,7 +32,7 @@
 #define _GETDEF_H
 
 /* getdef.c */
-extern int getdef_bool (const char *);
+extern bool getdef_bool (const char *);
 extern long getdef_long (const char *, long);
 extern int getdef_num (const char *, int);
 extern unsigned int getdef_unum (const char *, unsigned int);
